--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+ 
+</style>
 </head>
 <body>
     <nav class="navbar">
@@ -14,7 +16,7 @@
         <a class="navbar-brand" href="#">Message Board</a>
       </div>
     </div>
-  </nav>
+    </nav>
   <div class="container">
     <%= yield %>
   </div>
