--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,20 @@
   </div>
 </div>
 
-<%= form_for(Message.new) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    投稿フォーム
+  </div>
+  <div class="panel-body">
+    <%= form_for(Message.new) do |f| %>
+  <div class="form-group">
+    名前:
+    <%= f.text_area :name, class: "form-control", size: "30x1", placeholder: "お名前" %>
+  </div>
+  <div class="form-group">
+    内容:
+    <%= f.text_area :body, class: "form-control", size: "100x5", placeholder: "投稿内容を記入してください" %>
+    <br/>
+    <%= f.submit class: "btn btn-sm btn-primary" %>
+  </div>
 <% end %>
