--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,15 +18,19 @@
     </div>
     <div class="panel-body">
       <div class="form-group">
+        <div class="row">
+        <div class="col-xs-2">
         名前:
-        <%= f.text_field :name, class: "form-control", size: "10x1", placeholder: "お名前" %>
+        <%= f.text_field :name, class: "form-control", placeholder: "お名前" %>
+        </div>
+        </div>
       </div>
       <div class="form-group">
         内容:
         <%= f.text_area :body, class: "form-control", size: "100x5", placeholder: "投稿内容を記入してください" %>
       </div>
       <div class="form-group">
-      <%= f.submit class: "btn btn-sm btn-primary" %>
+      <%= f.submit "投稿", class: "btn btn-sm btn-primary" %>
       </div>
     </div>
   </div>
