--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,13 +2,13 @@
   <div class="panel-heading">
     メッセージ一覧
   </div>
-    
   <div class="panel-body">
     <% @messages.each do |message| %>
       <span class="label label-info"><%= message.name %></span>
+      <span class="label label-default"><%= message.age %>才</span>
       <%= message.body %>
-      (<%= link_to "edit" , edit_message_path(message) %>
-       <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？'} %>
+      (<%= link_to "編集" , edit_message_path(message) %>
+       <%= link_to "削除" , message , method: :delete, data: { confirm: '削除してもよろしいですか？'} %>
        )
       <br>
     <% end %>
